--- a/debian/control
+++ b/debian/control
@@ -59,6 +59,7 @@ Build-Depends: autotools-dev,
                mesa-common-dev,
                pkg-config,
                pkg-kde-tools,
+               protobuf-compiler,
                python-minimal,
                python2.7,
                qtbase5-private-dev (>= 5.6.0+dfsg~),
@@ -93,8 +94,7 @@ Description: Web content engine library for Qt - development files
 Package: libqt5webengine5
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends},
-         ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Description: Web content engine library for Qt
  QtWebEngine provides a Web browser engine that makes it easy to embed content
@@ -105,8 +105,7 @@ Description: Web content engine library for Qt
 Package: qml-module-qtwebengine
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends},
-         ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Breaks: libqt5webengine5-qmlwebkitplugin (<< 5.2.1+dfsg-6~)
 Replaces: libqt5webengine5-qmlwebkitplugin (<< 5.2.1+dfsg-6~)
@@ -119,8 +118,7 @@ Description: Qt WebEngine QML module
 Package: qt5webengine-examples
 Architecture: any
 Multi-Arch: same
-Depends: ${misc:Depends},
-         ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Breaks: libqt5webengine5-qmlwebkitplugin (<< 5.2.1+dfsg-6~)
 Replaces: libqt5webengine5-qmlwebkitplugin (<< 5.2.1+dfsg-6~)
@@ -135,8 +133,7 @@ Architecture: amd64 i386 powerpc s390x
 Multi-Arch: same
 Section: debug
 Priority: extra
-Depends: libqt5webengine5 (= ${binary:Version}),
-         ${misc:Depends}
+Depends: libqt5webengine5 (= ${binary:Version}), ${misc:Depends}
 Description: Web content engine library for Qt - debugging symbols
  QtWebEngine provides a Web browser engine that makes it easy to embed content
  from the World Wide Web into your Qt application.
