--- a/debian/control
+++ b/debian/control
@@ -66,6 +66,7 @@ Build-Depends: autotools-dev,
                qtdeclarative5-private-dev (>= 5.6.0~),
                qtlocation5-dev,
                qtscript5-private-dev (>= 5.6.0+dfsg~),
+               qttools5-dev,
                re2c,
                ruby
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.6.0+dfsg~),
