libvpx-dev needs to be >= 1.4

--- a/debian/control
+++ b/debian/control
@@ -45,7 +45,7 @@ Build-Depends: autotools-dev,
                libsqlite3-dev,
                libsrtp-dev,
                libv8-dev,
-               libvpx-dev,
+               libvpx-dev (>= 1.4),
                libwebp-dev,
                libxcomposite-dev,
                libxcursor-dev,
