--- a/debian/control
+++ b/debian/control
@@ -14,9 +14,9 @@ Build-Depends: autotools-dev,
                gperf,
                khronos-api,
                libasound2-dev,
-               libavcodec-dev (>= 7:2.8),
-               libavformat-dev (>= 7:2.8),
-               libavutil-dev (>= 7:2.8),
+               libavcodec-dev,
+               libavformat-dev,
+               libavutil-dev,
                libcap-dev,
                libdbus-1-dev,
                libegl1-mesa-dev,
