Add libprotobuf-dev to build-deps

--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Build-Depends: autotools-dev,
                libopus-dev,
                libpci-dev,
                libpng-dev,
+               libprotobuf-dev,
                libpulse-dev,
                libqt5opengl5-dev (>= 5.6.0+dfsg~),
                libqt5webchannel-dev (>= 5.6.0~),
