--- a/debian/control
+++ b/debian/control
@@ -82,7 +82,8 @@ Package: libqt5webengine5-dev
 Architecture: any
 Multi-Arch: same
 Section: libdevel
-Depends: libqt5webengine5 (= ${binary:Version}),
+Depends: libqt5webchannel-dev,
+         libqt5webengine5 (= ${binary:Version}),
          qtbase5-dev,
          qtdeclarative5-dev,
          ${misc:Depends}
