--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ export QT_SELECT := qt5
 DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
-gstab_architectures := amd64 i386 powerpc s390x
+gstab_architectures := amd64 i386 powerpc s390x armhf
 fulldebug_architectures := none
 disabled_jit_architectures := armel mips mipsel
 disabled_pch_architectures := amd64 powerpc s390x
