lower build-dep version deps to version we have, see if it still works

--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: autotools-dev,
                bison,
                chrpath,
                closure-compiler,
-               debhelper (>= 10),
+               debhelper (>= 9),
                dh-autoreconf,
                flex,
                gperf,
@@ -45,7 +45,7 @@ Build-Depends: autotools-dev,
                libqt5opengl5-dev (>= 5.7.1~20161021~),
                libqt5webchannel5-dev (>= 5.7.1~20161021~),
                libqt5xmlpatterns5-dev (>= 5.7.1~20161021~),
-               libre2-dev (>= 20161101+dfsg-2),
+               libre2-dev,
                libsnappy-dev,
                libsqlite3-dev,
                libsrtp-dev,
