--- a/debian/control
+++ b/debian/control
@@ -122,6 +122,8 @@ Depends: libqt5webengine-data (= ${source:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
+Breaks: libqt5webengine5 (<< 5.7.1)
+Replaces: libqt5webengine5 (<< 5.7.1)
 Description: Web content engine library for Qt
  QtWebEngine provides a Web browser engine that makes it easy to embed content
  from the World Wide Web into your Qt application.
@@ -146,6 +148,8 @@ Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
+Breaks: libqt5webengine5 (<< 5.7.1)
+Replaces: libqt5webengine5 (<< 5.7.1)
 Description: Web content engine library for Qt
  QtWebEngine provides a Web browser engine that makes it easy to embed content
  from the World Wide Web into your Qt application.
