--- a/debian/control
+++ b/debian/control
@@ -13,8 +13,6 @@ Build-Depends: autotools-dev,
                dh-autoreconf,
                flex,
                gperf,
-               yasm [amd64 i386],
-               ninja-build,
                khronos-api,
                libasound2-dev [linux-any],
                libavcodec-dev,
@@ -37,10 +35,10 @@ Build-Depends: autotools-dev,
                libicu-dev,
                libjpeg-dev,
                libjsoncpp-dev,
+               liblcms2-dev,
                libminizip-dev,
                libnss3-dev,
                libopus-dev,
-               liblcms2-dev,
                libpci-dev,
                libpng-dev,
                libprotobuf-dev,
@@ -65,6 +63,7 @@ Build-Depends: autotools-dev,
                libxss-dev,
                libxtst-dev,
                mesa-common-dev,
+               ninja-build,
                pkg-config,
                pkg-kde-tools,
                protobuf-compiler,
@@ -73,10 +72,12 @@ Build-Depends: autotools-dev,
                qtdeclarative5-private-dev (>= 5.9.0~),
                qtlocation5-dev,
                qtscript5-private-dev (>= 5.9.0~),
+               qttools5-dev,
                re2c,
                ruby,
                xauth,
                xvfb,
+               yasm [amd64 i386],
                yui-compressor
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.0~),
                      qtbase5-doc-html (>= 5.9.0~),
@@ -212,7 +213,11 @@ Description: Qt WebEngine tools
 Package: qtwebengine5-examples
 Architecture: any
 Multi-Arch: same
-Depends: libjs-jquery, libjs-marked, qtwebengine5-dev-tools, ${misc:Depends}, ${shlibs:Depends}
+Depends: libjs-jquery,
+         libjs-marked,
+         qtwebengine5-dev-tools,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Pre-Depends: ${misc:Pre-Depends}
 Replaces: qt5webengine-examples (<< 5.7.1)
 Breaks: qt5webengine-examples (<< 5.7.1)
