--- a/debian/control
+++ b/debian/control
@@ -16,9 +16,9 @@ Build-Depends: autotools-dev,
                gperf,
                khronos-api,
                libasound2-dev [linux-any],
-               libavcodec-dev (>= 7:3.1.1),
-               libavformat-dev (>= 7:3.1.1),
-               libavutil-dev (>= 7:3.1.1),
+               libavcodec-dev,
+               libavformat-dev,
+               libavutil-dev,
                libcap-dev [linux-any],
                libdbus-1-dev,
                libegl1-mesa-dev,
