--- a/debian/control
+++ b/debian/control
@@ -66,7 +66,7 @@ Build-Depends: bison,
                pkg-kde-tools,
                protobuf-compiler,
                python,
-               qtbase5-private-dev (>= 5.9.2+dfsg-3~),
+               qtbase5-private-dev (>= 5.9.2),
                qtdeclarative5-private-dev (>= 5.9.2~),
                qtpositioning5-dev,
                qtquickcontrols2-5-dev,
