libxnvctrl-dev not available on arm64 in xenial

--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Build-Depends: bison,
                libxcomposite-dev,
                libxcursor-dev,
                libxml2-dev,
-               libxnvctrl-dev,
+               libxnvctrl-dev [amd64 armhf],
                libxrandr-dev,
                libxrender-dev,
                libxslt1-dev,
