--- a/debian/control
+++ b/debian/control
@@ -14,9 +14,9 @@ Build-Depends: bison,
                gperf,
                khronos-api,
                libasound2-dev [linux-any],
-               libavcodec-dev (>= 7:4.0~),
-               libavformat-dev (>= 7:4.0~),
-               libavutil-dev (>= 7:4.0~),
+               libavcodec-dev (>= 7:3),
+               libavformat-dev (>= 7:3),
+               libavutil-dev (>= 7:3),
                libcap-dev [linux-any],
                libdbus-1-dev,
                libegl1-mesa-dev,
